benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-safe031_power.oepc_pso.oepc_rmo.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe031_power.oepc_pso.oepc_rmo.oepc.yml/safe031_power.oepc_pso.oepc_rmo.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe031_power.oepc_pso.oepc_rmo.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_2h2ssgp8/tmp/tmpc8q0ti09.c
Compilation started
/tmp/BenchExec_run_2h2ssgp8/tmp/tmpc8q0ti09.c: In function ‘P0’:
/tmp/BenchExec_run_2h2ssgp8/tmp/tmpc8q0ti09.c:567:19: error: ‘FALSE’ undeclared (first use in this function)
  567 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_2h2ssgp8/tmp/tmpc8q0ti09.c:567:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
